--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
+server.port=8080 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:2345/evmadb
 spring.datasource.username=root
 spring.datasource.password=evmaroot
+
+## none , create , upgrade
+spring.jpa.hibernate.ddl-auto = create-drop
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
 
 
 
