- Xác định thêm về yêu cầu bài toán . - Chỉnh sửa mô hình dữ liệu - Hoàn thiện các entity và api Create Event

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:2345/evmadb
 spring.datasource.username=root
 spring.datasource.password=evmaroot
 
-## none , create , upgrade
+# none , create , upgrade
 spring.jpa.hibernate.ddl-auto = create-drop
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
