- Kết nối các back end với front end - Chạy các hoạt động cơ bản

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.datasource.password=evmaroot
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
 
+spring.mvc.hiddenmethod.filter.enabled=true
+
 
 
 
