- Chuyển hoàn toàn sang bootstrap - Validate register

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -1,10 +1,9 @@
-NotEmpty.appUserForm.accountName=User name is required
-NotEmpty.appUserForm.name=  Name is required
-NotEmpty.appUserForm.email=Email is required
-NotEmpty.appUserForm.password=Password is required
-NotEmpty.appUserForm.confirmPassword=Confirm Password is required
+NotEmpty.newregister.register_account_name = User name is required
+NotEmpty.newregister.register_name = Name is required
+NotEmpty.newregister.register_email = Email is required
+NotEmpty.newregister.register_account_password = Password is required
+NotEmpty.newregister.confirm_password = Confirm Password is required
 
-Pattern.appUserForm.email=Invalid email
-Duplicate.appUserForm.email=Email has been used by another account
-Duplicate.appUserForm.userName=Username is not available
-Match.appUserForm.confirmPassword=Password does not match the confirm password
+Duplicate.newregister.register_email = Email has been used by another account
+Duplicate.newregister.register_account_name=Username is not available
+Match.newregister.confirm_password =Password does not match the confirm password
