- Validate register , speaker , hiện thông báo nếu có lỗi - Mã hóa mật khẩu

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -1,9 +1,10 @@
-NotEmpty.newregister.register_account_name = User name is required
-NotEmpty.newregister.register_name = Name is required
-NotEmpty.newregister.register_email = Email is required
-NotEmpty.newregister.register_account_password = Password is required
-NotEmpty.newregister.confirm_password = Confirm Password is required
+NotEmpty.account_name = User name is required
+NotEmpty.name = Name is required
+NotEmpty.email = Email is required
+NotEmpty.career = Career is required
+NotEmpty.password = Password is required
+NotEmpty.confirm_password = Confirm Password is required
 
-Duplicate.newregister.register_email = Email has been used by another account
-Duplicate.newregister.register_account_name=Username is not available
-Match.newregister.confirm_password =Password does not match the confirm password
+Duplicate.email = Email has been used by another account
+Duplicate.account_name = Username is used by another account 
+Match.confirm_password = Password does not match the confirm password
