- Done CKediter - Validate Create Event - Event Management Beta

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -5,6 +5,12 @@ NotEmpty.career = Career is required
 NotEmpty.password = Password is required
 NotEmpty.confirm_password = Confirm Password is required
 
+NotEmpty.content = Content is required
+
+NotEmpty.date = Running date is required
+NotEmpty.time = Running time is required
+NotEmpty.location = Event's location is required
+
 Duplicate.email = Email has been used by another account
 Duplicate.account_name = Username is used by another account 
 Match.confirm_password = Password does not match the confirm password
